# com.calindora.follow

./: .dockerignore  .editorconfig  .eslintrc.json  .gitignore  .pre-commit-config.yaml  API.md  CHECKS  Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  app.json  build.rs  deny.toml  devbox.json  renovate.json  sqlx-data.json
.cargo/: config.toml
.github/: renovate.json
.github/workflows/: audit.yaml  ci.yaml  general.yml
.sqlx/: query-113f9b988895f77ddbd2ce410b59ffd221cab207be54b1176eacf3bbde98ddc5.json  query-4f45557d7d9f35883dad99e955edd31f3655d178903a043e4199ad8b35253a3e.json  query-56c5f11568fad119b3f97f9dc9efca2de84ea14990df1b15f369da879ee578b4.json  query-5a5531d92a638e6ddc9741bfa9982b54205fc60092dc3b2dc358fe398696a4c3.json  query-63f173efc1117bba234ec1c0c5506005e609b3a7efb1f3e838451c15acdd95fd.json  query-7bff69c61ddec28a930af25f78c54982791b2b3812024a63bb26253d7cf075f2.json  query-b7f1df1bea4060caeaa43e0cfdae6324d865bdabe6e1937bc8ce81de1475305a.json  query-c92623b6f8a0e6cbaea00bbcf15973f66471a34e17a866855f2d51a8d355bb0e.json  query-d768f5f483f98c9f61ad25ce8114ced84f2f6796bb5a492dc8db397d2fc455c8.json
frontend/: .prettierrc  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: ColorLegend.tsx  ErrorBoundary.tsx  ErrorProvider.tsx  ErrorToasts.tsx  FollowMap.tsx  Layout.tsx  LoadingError.tsx  LoadingIndicator.tsx  StatusPanel.tsx
frontend/src/context/: ErrorContext.tsx
frontend/src/hooks/: useDeviceReports.ts  useError.ts  useToast.ts  useWindowSize.ts
frontend/src/pages/: FollowPage.tsx  HomePage.tsx  NotFoundPage.tsx
frontend/src/services/: api.ts  color.ts  config.ts  toast.tsx
frontend/src/store/: followStore.ts
frontend/src/util/: path.ts
migrations/: 20220902032921_create_devices.up.sql  20230129014328_create_devices.up.sql  20230203002649_create_reports.up.sql
settings/: base.yaml
src/: lib.rs  main.rs  server.rs  settings.rs  telemetry.rs  util.rs
src/models/: device.rs  mod.rs  report.rs
src/routes/: api.rs  devices.rs  frontend_config.rs  health_check.rs  index.rs  mod.rs
static/js/: follow.js
templates/: base.html  follow.html
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  reports.rs
