[package]
name = "com_calindora_follow"
version = "0.1.0"
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-web = "4.11.0"
# Needed until actix-web-validator supports validator 0.20
# actix-web-validator = "6.0.0"
actix-web-validator = { git = "https://github.com/wlhyl/actix-web-validator.git", rev = "e9439a0313d5e5c871bd3703accadaeaafc6c916" }
anyhow = "1.0.98"
bigdecimal = { version = "0.4.8", features = ["serde"] }
config = { git = "https://github.com/mehcode/config-rs.git", rev = "e3c1d0b452639478662a44f15ef6d5b6d969bf9b" }
dotenvy = "0.15.7"
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
once_cell = "1.21.3"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["bigdecimal", "postgres", "runtime-tokio", "time", "tls-rustls", "uuid"] }
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["serde-human-readable", "macros"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.18"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
reqwest = "=0.12.15"
