[package]
name = "com_calindora_follow"
version = "0.1.0"
edition = "2024"
description = "A web application for displaying location reports on a map."
repository = "https://github.com/aexoden/com.calindora.follow"
license = "Apache-2.0 OR MIT"
build = "build.rs"
keywords = ["gps", "map"]
categories = ["visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "=0.7.1"
actix-files = "=0.6.8"
actix-web = "=4.11.0"
actix-web-validator = "=7.0.0"
anyhow = "=1.0.100"
bigdecimal = { version = "=0.4.9", features = ["serde"] }
config = "=0.15.18"
dotenvy = "=0.15.7"
futures = "=0.3.31"
hex = "=0.4.3"
hmac = "=0.13.0"
once_cell = "=1.21.3"
secrecy = { version = "=0.10.3", features = ["serde"] }
serde = { version = "=1.0.228", features = ["serde_derive"] }
serde_json = "=1.0.145"
sha2 = "=0.11.0"
sqlx = { version = "=0.8.6", features = [
  "bigdecimal",
  "postgres",
  "runtime-tokio",
  "time",
  "tls-rustls",
  "uuid"
] }
thiserror = "=2.0.17"
time = { version = "=0.3.47", features = ["macros", "serde-human-readable"] }
tracing = { version = "=0.1.41", features = ["log"] }
tracing-actix-web = "=0.7.19"
tracing-bunyan-formatter = "=0.3.10"
tracing-log = "=0.2.0"
tracing-subscriber = { version = "=0.3.20", features = ["env-filter"] }
uuid = { version = "=1.18.1", features = ["serde"] }
validator = { version = "=0.20.0", features = ["derive"] }

[dev-dependencies]
reqwest = "=0.13.2"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
expect_used = "warn"
missing_errors_doc = "allow"
multiple_crate_versions = "allow"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"

[lints.rust]
future_incompatible = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }
